# wasm-fasta

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: main.rs  wrapper.js
